Updated README, there is no v0.6.5.1 tag! Updated Gemfile.lock as well.

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-!!! WARNING !!! Please don't use this branch ("edge") directly, instead, use the v0.6.5.1[http://github.com/rymai/devise_invitable/tree/v0.6.5.1] tag or the master[http://github.com/rymai/devise_invitable/tree/master]. This branch will be removed as soon as Rails 3.0 will be released !!! WARNING !!!
+== !!! WARNING !!! Please don't use this branch ("edge") directly, instead, use the master[http://github.com/rymai/devise_invitable/tree/master] branch. This branch will be removed as soon as Rails 3.0 will be released !!! WARNING !!!
 
 = DeviseInvitable
 
